Bug 1264988 - Scrollbar flickers in the Awesomebar results list. r=Paolo
We never want scrollbars in the urlbar autocomplete, thus:
1. Always have maxResults == maxRows
2. force overflow: hidden on the richlistbox scrollbox

MozReview-Commit-ID: ApA6TcuioUd

UltraBlame original commit: 07052313bf75f6a1fd9f460f146b998824302d64

--- a/browser/base/content/browser.css
+++ b/browser/base/content/browser.css
@@ -593,6 +593,12 @@ html|input.urlbar-input[textoverflow]:not([focused]) {
 
 
 
+#PopupAutoCompleteRichResult > richlistbox > scrollbox {
+  overflow: hidden !important;
+}
+
+
+
 #PopupAutoCompleteRichResult[noactions] > richlistbox > richlistitem.overridable-action > .ac-url {
   display: -moz-box;
 }
